adding the off/on pulses saving

--- a/07.18.24_final_asym_test2.ipynb
+++ b/07.18.24_final_asym_test2.ipynb
@@ -372,6 +372,28 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "be7d6fa7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "330\n",
+      "13\n",
+      "8992\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(run_asyms_D))\n",
+    "print(len(run_asyms_D[0]))\n",
+    "print(len(run_asyms_D[0][0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "55c7e817",
    "metadata": {},
    "outputs": [
@@ -402,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "id": "a0cab2b3",
    "metadata": {},
    "outputs": [
@@ -410,6 +432,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
       "8992\n",
       "8992\n",
       "\n",
@@ -419,8 +466,6 @@
     }
    ],
    "source": [
-    "\n",
-    "        \n",
     "All_Li6_asyms = np.zeros((len(arr_sizer[0])), dtype=float) ## num points\n",
     "for r in range(len(ch_asyms_All[0])):\n",
     "    All_Li6_asyms = All_Li6_asyms + ch_asyms_All[-1][r]\n",
@@ -437,7 +482,20 @@
     "    for r in range(len(ch_asyms_All[0])):\n",
     "        All_NaI_asyms = All_NaI_asyms + ch_asyms_All[i][r]\n",
     "All_NaI_asyms = All_NaI_asyms/numruns\n",
-    "    \n",
+    "\n",
+    "upstrm = np.zeros((len(arr_sizer[0])), dtype=float) ## num points\n",
+    "for i in range(12): ## 0-23, not 0-24 (24 is 6Li)\n",
+    "    print(i)\n",
+    "    for r in range(len(ch_asyms_All[0])):\n",
+    "        upstrm = upstrm + ch_asyms_All[i][r]\n",
+    "upstrm = upstrm/numruns\n",
+    "print()\n",
+    "dnstrm = np.zeros((len(arr_sizer[0])), dtype=float) ## num points\n",
+    "for i in range(12,24): ## 0-23, not 0-24 (24 is 6Li)\n",
+    "    print(i)\n",
+    "    for r in range(len(ch_asyms_All[0])):\n",
+    "        dnstrm = dnstrm + ch_asyms_All[i][r]\n",
+    "dnstrm = dnstrm/numruns\n",
     "# Upstrm_NaI_asyms = np.zeros((len(arr_sizer[0])), dtype=float) ## num points\n",
     "# for i in range(12): ## 0-11, (24 is 6Li)\n",
     "#     for r in range(len(ch_asyms_All[0])):\n",
@@ -461,7 +519,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
+   "id": "94c66c66",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "330\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(numruns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "id": "41a4e509",
    "metadata": {},
    "outputs": [
@@ -496,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "d5c3213f",
    "metadata": {},
    "outputs": [
@@ -538,7 +614,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
+   "id": "0a852c18",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "330\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(numruns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "id": "af07a54e",
    "metadata": {},
    "outputs": [],
@@ -549,8 +643,13 @@
     "# plt.plot(xs_uncut[0], NaI_asyms[1] , label='NaI D1')\n",
     "# plt.plot(xs_cut[0], NaI_asyms[1] , label='NaI D1')\n",
     "# plt.plot(xs_cut[0], All_NaI_asyms/(24), label='All NaI')\n",
-    "plt.plot(xs_cut[0], (All_NaI_asyms/(24)), label='All NaI, rebinning: ' + str(rebinf))\n",
-    "plt.plot(xs_cut[0], (All_Li6_asyms), label='Li6, rebinning: ' + str(rebinf))\n",
+    "plt.plot(xs_cut[0], (All_NaI_asyms/(24)), label='All NaI, no rebinning: ')\n",
+    "plt.plot(xs_cut[0], (upstrm/(12)), label='upstrm, no rebinning: ')\n",
+    "plt.plot(xs_cut[0], (dnstrm/(12)), label='dnstrm, no rebinning: ')\n",
+    "\n",
+    "# plt.plot(xs_cut[0], (All_Li6_asyms), label='Li6, no rebinning: ')\n",
+    "# plt.plot(xs_cut_rebin8, (All_NaI_asyms_rebin8/(24)), label='All NaI, rebinning: ' + str(rebinf))\n",
+    "# plt.plot(xs_cut_rebin8, (All_Li6_asyms_rebin8), label='Li6, rebinning: ' + str(rebinf))\n",
     "\n",
     "# plt.plot(xs_uncut[0], NaI_asyms[7] , label='NaI D1')\n",
     "# plt.plot(d, b/24, label='All NaI')\n",
@@ -560,9 +659,9 @@
     "# plt.plot(d, b, label='6Li')\n",
     "\n",
     "    \n",
-    "plt.title('asym') \n",
+    "plt.title(f'asym, {numruns} runs, (' + str(numruns*4/60) + ' hours)') \n",
     "plt.xlabel(\"time from trigger (ms)\")\n",
-    "plt.ylabel(\"%\")\n",
+    "plt.ylabel('absolute')\n",
     "\n",
     "plt.ylim(-0.5,0.5)\n",
     "# plt.xlim(xs_cut[1800],xs_cut[-1])\n",
@@ -584,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "b03cf3c4",
    "metadata": {},
    "outputs": [
@@ -602,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "9c461148",
    "metadata": {},
    "outputs": [
