added pulse-adding py files to run. Many polarization attempts.

--- a/gammacount_D_v2_debug.ipynb
+++ b/gammacount_D_v2_debug.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,14 +267,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dataread from binary time: 2.4951882362365723\n"
+      "dataread from binary time: 3.69604229927063\n"
      ]
     }
    ],
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,14 +366,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "plotting and/or base subtraction time: 12.906165599822998\n"
+      "plotting and/or base subtraction time: 8.608455896377563\n"
      ]
     }
    ],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,14 +468,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "aligning and cutting time: 14.385793924331665\n"
+      "aligning and cutting time: 28.319307804107666\n"
      ]
     }
    ],
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +763,7 @@
       "channel 9\n",
       "channel 10\n",
       "channel 11\n",
-      "18.377466201782227\n"
+      "32.19239830970764\n"
      ]
     }
    ],
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -819,7 +819,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_3416\\3557431072.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;31m#     print(jit_ints_beg[i][300][20:30])\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mp\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5000\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m         \u001b[1;32mif\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mall\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpks_beg\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mp\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mpeaks_beg_np\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mp\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_25288\\3557431072.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;31m#     print(jit_ints_beg[i][300][20:30])\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mp\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5000\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m         \u001b[1;32mif\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mall\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpks_beg\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mp\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mpeaks_beg_np\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mp\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mNameError\u001b[0m: name 'peaks_beg_np' is not defined"
      ]
     }
@@ -970,21 +970,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'sum_ranges_beg_np' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_15812\\880548902.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[0mints_end_jit\u001b[0m \u001b[1;33m=\u001b[0m\u001b[0mList\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 26\u001b[1;33m \u001b[0msum_ranges_beg_np\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msum_ranges_beg_np\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     27\u001b[0m \u001b[0msum_ranges_end_np\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msum_ranges_end_np\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     28\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'sum_ranges_beg_np' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "@njit\n",
     "def integrate_peaks_jit(ys, int_ranges): ## ranges in which to integrate int_ranges = [[2,6], [6,10]], 2 len array for each point\n",
@@ -1033,23 +1021,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "12\n",
-      "5000\n",
-      "69\n",
-      "58\n",
-      "[56 60]\n",
-      "56\n",
-      "60\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(len(pks_beg))\n",
     "print(len(pks_beg[0]))\n",
@@ -1062,52 +1036,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "channel 0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\gabeo\\anaconda3\\lib\\site-packages\\numba\\core\\ir_utils.py:2152: NumbaPendingDeprecationWarning: \u001b[1m\n",
-      "Encountered the use of a type that is scheduled for deprecation: type 'reflected list' found for argument 'peaks' of function 'integrate_peaks_jit_2'.\n",
-      "\n",
-      "For more information visit https://numba.readthedocs.io/en/stable/reference/deprecation.html#deprecation-of-reflection-for-list-and-set-types\n",
-      "\u001b[1m\n",
-      "File \"C:\\Users\\gabeo\\AppData\\Local\\Temp\\ipykernel_15812\\2040983952.py\", line 2:\u001b[0m\n",
-      "\u001b[1m@njit\n",
-      "\u001b[1mdef integrate_peaks_jit_2(ys, peaks): ## ranges in which to integrate int_ranges = [[2,6], [6,10]], 2 len array for each point\n",
-      "\u001b[0m\u001b[1m^\u001b[0m\u001b[0m\n",
-      "\u001b[0m\n",
-      "  warnings.warn(NumbaPendingDeprecationWarning(msg, loc=loc))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "channel 1\n",
-      "channel 2\n",
-      "channel 3\n",
-      "channel 4\n",
-      "channel 5\n",
-      "channel 6\n",
-      "channel 7\n",
-      "channel 8\n",
-      "channel 9\n",
-      "channel 10\n",
-      "channel 11\n",
-      "2.4004437923431396\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "@njit\n",
     "def integrate_peaks_jit_2(ys, peaks): ## ranges in which to integrate int_ranges = [[2,6], [6,10]], 2 len array for each point\n",
@@ -1156,25 +1087,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[  2.86785714  23.86785714  25.86785714  27.86785714 111.86785714\n",
-      "  56.86785714  33.86785714  -6.13214286  29.86785714  -1.13214286]\n",
-      "[124.86785714  97.86785714  52.86785714  19.86785714  26.86785714\n",
-      "  34.86785714  29.86785714  38.86785714  42.86785714  49.86785714]\n",
-      "\n",
-      "[ 49.86785714 553.86785714 566.86785714  58.86785714 146.86785714\n",
-      "  40.86785714  48.86785714 183.86785714  48.86785714  40.93      ]\n",
-      "[ 15.86785714 129.86785714 141.86785714 141.86785714 150.86785714\n",
-      " 178.86785714  42.86785714  19.86785714  20.86785714 114.86785714]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "p = 1586\n",
     "\n",
@@ -1191,33 +1106,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 48.64642857  85.64642857  11.64642857  47.64642857  54.64642857\n",
-      "  14.64642857 104.64642857 100.64642857 108.64642857  33.64642857]\n",
-      "[ 48.64642857  85.64642857  11.64642857  47.64642857  54.64642857\n",
-      "  14.64642857 104.64642857 100.64642857 108.64642857  33.64642857]\n",
-      "[61.64642857 42.64642857 26.64642857 21.64642857  2.64642857 94.64642857\n",
-      " 57.64642857 76.64642857 39.64642857 26.64642857]\n",
-      "[61.64642857 42.64642857 26.64642857 21.64642857  2.64642857 94.64642857\n",
-      " 57.64642857 76.64642857 39.64642857 26.64642857]\n",
-      "\n",
-      "[ 32.64642857  30.64642857  49.64642857 184.64642857 155.64642857\n",
-      " 173.64642857  59.64642857  77.64642857   8.64642857 113.64642857]\n",
-      "[ 32.64642857  30.64642857  49.64642857 184.64642857 155.64642857\n",
-      " 173.64642857  59.64642857  77.64642857   8.64642857 113.64642857]\n",
-      "[ 27.64642857 151.64642857  21.64642857 148.64642857 123.64642857\n",
-      "  90.64642857  17.64642857   7.64642857  18.64642857 136.64642857]\n",
-      "[ 27.64642857 151.64642857  21.64642857 148.64642857 123.64642857\n",
-      "  90.64642857  17.64642857   7.64642857  18.64642857 136.64642857]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(len(ints_beg_jit)):\n",
     "#     print(i)\n",
@@ -1266,17 +1157,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4.618896722793579\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "plt.ioff()\n",
     "start = time.time()\n",
@@ -1333,21 +1216,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5\n",
-      "12\n",
-      "12\n",
-      "12\n",
-      "12\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cols = ['channel', 'begregion_integrals[uC]', 'endregion_integrals[uC]', 'begregion_hist[uC]', 'endregion_hist[uC]']\n",
     "intsData = [chan_enab[:-1], ints_beg_all, ints_end_all, histdat_beg, histdat_end]\n",
@@ -1360,14 +1231,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5\n"
+     "ename": "NameError",
+     "evalue": "name 'ints_beg_all' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_25288\\627810399.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mcols\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m'channel'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'begregion_integrals[uC]'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'endregion_integrals[uC]'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'begregion_hist[uC]'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'endregion_hist[uC]'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mintsData\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mchan_enab\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mints_beg_all\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mints_end_all\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mhistdat_beg\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mhistdat_end\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mintsData\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'ints_beg_all' is not defined"
      ]
     }
    ],
@@ -1413,14 +1288,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n"
+     "ename": "NameError",
+     "evalue": "name 'df_ints' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_25288\\618246499.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m### testing end historgam - beg histogram\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mtestarr1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf_ints\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'begregion_hist[uC]'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_numpy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[0mtestarr2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf_ints\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'endregion_hist[uC]'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_numpy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m# print(testarr1[0])\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df_ints' is not defined"
      ]
     }
    ],
