--- a/12.14.24_FitConstants.ipynb
+++ b/12.14.24_FitConstants.ipynb
@@ -177,7 +177,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x208d6fb4a60>]"
+       "[<matplotlib.lines.Line2D at 0x23468a44700>]"
       ]
      },
      "execution_count": 4,
@@ -354,18 +354,18 @@
       "F:\\LANL/processed_data/runs12034-12363//ONOFF_D/12158_ONOFF_D.h5\n",
       "F:\\LANL/processed_data/runs12034-12363//ONOFF_D/12159_ONOFF_D.h5\n",
       "F:\\LANL/processed_data/runs12034-12363//ONOFF_D/12160_ONOFF_D.h5\n",
-      "F:\\LANL/processed_data/runs12034-12363//ONOFF_D/12161_ONOFF_D.h5\n"
+      "F:\\LANL/processed_data/runs12034-12363//ONOFF_D/12161_ONOFF_D.h5\n",
+      "F:\\LANL/processed_data/runs12034-12363//ONOFF_D/12162_ONOFF_D.h5\n",
+      "F:\\LANL/processed_data/runs12034-12363//ONOFF_D/12163_ONOFF_D.h5\n",
+      "F:\\LANL/processed_data/runs12034-12363//ONOFF_D/12164_ONOFF_D.h5\n",
+      "F:\\LANL/processed_data/runs12034-12363//ONOFF_D/12165_ONOFF_D.h5\n",
+      "F:\\LANL/processed_data/runs12034-12363//ONOFF_D/12166_ONOFF_D.h5\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F:\\LANL/processed_data/runs12034-12363//ONOFF_D/12162_ONOFF_D.h5\n",
-      "F:\\LANL/processed_data/runs12034-12363//ONOFF_D/12163_ONOFF_D.h5\n",
-      "F:\\LANL/processed_data/runs12034-12363//ONOFF_D/12164_ONOFF_D.h5\n",
-      "F:\\LANL/processed_data/runs12034-12363//ONOFF_D/12165_ONOFF_D.h5\n",
-      "F:\\LANL/processed_data/runs12034-12363//ONOFF_D/12166_ONOFF_D.h5\n",
       "F:\\LANL/processed_data/runs12034-12363//ONOFF_D/12167_ONOFF_D.h5\n",
       "F:\\LANL/processed_data/runs12034-12363//ONOFF_D/12168_ONOFF_D.h5\n",
       "F:\\LANL/processed_data/runs12034-12363//ONOFF_D/12169_ONOFF_D.h5\n",
@@ -488,13 +488,7 @@
       "F:\\LANL/processed_data/runs12034-12363//ONOFF_D/12286_ONOFF_D.h5\n",
       "F:\\LANL/processed_data/runs12034-12363//ONOFF_D/12287_ONOFF_D.h5\n",
       "F:\\LANL/processed_data/runs12034-12363//ONOFF_D/12288_ONOFF_D.h5\n",
-      "F:\\LANL/processed_data/runs12034-12363//ONOFF_D/12289_ONOFF_D.h5\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "F:\\LANL/processed_data/runs12034-12363//ONOFF_D/12289_ONOFF_D.h5\n",
       "F:\\LANL/processed_data/runs12034-12363//ONOFF_D/12290_ONOFF_D.h5\n",
       "F:\\LANL/processed_data/runs12034-12363//ONOFF_D/12291_ONOFF_D.h5\n",
       "F:\\LANL/processed_data/runs12034-12363//ONOFF_D/12292_ONOFF_D.h5\n",
@@ -503,7 +497,13 @@
       "F:\\LANL/processed_data/runs12034-12363//ONOFF_D/12295_ONOFF_D.h5\n",
       "F:\\LANL/processed_data/runs12034-12363//ONOFF_D/12296_ONOFF_D.h5\n",
       "F:\\LANL/processed_data/runs12034-12363//ONOFF_D/12297_ONOFF_D.h5\n",
-      "F:\\LANL/processed_data/runs12034-12363//ONOFF_D/12298_ONOFF_D.h5\n",
+      "F:\\LANL/processed_data/runs12034-12363//ONOFF_D/12298_ONOFF_D.h5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "F:\\LANL/processed_data/runs12034-12363//ONOFF_D/12299_ONOFF_D.h5\n",
       "F:\\LANL/processed_data/runs12034-12363//ONOFF_D/12300_ONOFF_D.h5\n",
       "F:\\LANL/processed_data/runs12034-12363//ONOFF_D/12301_ONOFF_D.h5\n",
@@ -1077,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 18,
    "id": "dc7d0abd",
    "metadata": {},
    "outputs": [],
@@ -1101,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 12,
    "id": "568cb454",
    "metadata": {},
    "outputs": [
@@ -1497,7 +1497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 31,
    "id": "a828b290",
    "metadata": {},
    "outputs": [],
@@ -1512,17 +1512,22 @@
     "# xdata = xs[res_reg[0]:res_reg[1]]*1e-6\n",
     "\n",
     "plt.plot(xs,run_ON_D[r][ch])\n",
-    "plt.plot(xdata, ON_bgsub[r][ch], lw = '1.0', label='trouble run')\n",
+    "# plt.plot(xdata, ON_bgsub[r][ch], lw = '1.0', label='trouble run')\n",
     "plt.plot(xdata, ON_bgsub_np[r][ch], lw = '1.0', label='trouble run np version')\n",
     "plt.plot(xs,run_ON_D[r-1][ch])\n",
     "plt.plot(xdata, ON_bgsub[r-1][ch], lw = '1.0', label='normal?')\n",
+    "plt.axhline(y = 7430)\n",
+    "plt.axhline(y = 5448)\n",
+    "plt.axvline(x = 1.968)\n",
+    "\n",
+    "\n",
     "plt.legend()\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "id": "d207c0a5",
    "metadata": {},
    "outputs": [
@@ -1553,7 +1558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 21,
    "id": "df60ec45",
    "metadata": {},
    "outputs": [
@@ -1596,7 +1601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 22,
    "id": "bce396b6",
    "metadata": {},
    "outputs": [],
@@ -1619,19 +1624,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 17,
    "id": "e1313219",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-5.93816940e-08  1.37578048e-03 -1.09050513e+01  3.33583450e+04]\n",
-      "[7476.49707024 7473.98155264 7471.46729695 ... 3368.0975334  3367.53153737\n",
-      " 3366.96508985]\n"
-     ]
-    },
     {
      "ename": "ValueError",
      "evalue": "x and y must have same first dimension, but have shapes (4812,) and (4012,)",
@@ -1639,7 +1635,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_45576\\2785920162.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mp\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m# plt.plot(np.poly1d(test))\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mxdata\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mp\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_18676\\1098512366.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m# print(p(x))\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m# plt.plot(np.poly1d(test))\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mxdata\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mp\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\matplotlib\\pyplot.py\u001b[0m in \u001b[0;36mplot\u001b[1;34m(scalex, scaley, data, *args, **kwargs)\u001b[0m\n\u001b[0;32m   2767\u001b[0m \u001b[1;33m@\u001b[0m\u001b[0m_copy_docstring_and_deprecators\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mAxes\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2768\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscalex\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscaley\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2769\u001b[1;33m     return gca().plot(\n\u001b[0m\u001b[0;32m   2770\u001b[0m         \u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscalex\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mscalex\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscaley\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mscaley\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2771\u001b[0m         **({\"data\": data} if data is not None else {}), **kwargs)\n",
       "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\matplotlib\\axes\\_axes.py\u001b[0m in \u001b[0;36mplot\u001b[1;34m(self, scalex, scaley, data, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1630\u001b[0m         \"\"\"\n\u001b[0;32m   1631\u001b[0m         \u001b[0mkwargs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcbook\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnormalize_kwargs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmlines\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mLine2D\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1632\u001b[1;33m         \u001b[0mlines\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_get_lines\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1633\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mline\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mlines\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1634\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd_line\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mline\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\matplotlib\\axes\\_base.py\u001b[0m in \u001b[0;36m__call__\u001b[1;34m(self, data, *args, **kwargs)\u001b[0m\n\u001b[0;32m    310\u001b[0m                 \u001b[0mthis\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[0margs\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    311\u001b[0m                 \u001b[0margs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0margs\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 312\u001b[1;33m             \u001b[1;32myield\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_plot_args\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mthis\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    313\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    314\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mget_next_color\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
@@ -1667,7 +1663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 23,
    "id": "6be7b6d5",
    "metadata": {},
    "outputs": [
@@ -2106,7 +2102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 24,
    "id": "7e73f180",
    "metadata": {},
    "outputs": [
